--- a/log_app/templates/log_app/home.html
+++ b/log_app/templates/log_app/home.html
@@ -5,9 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ホームページ</title>
-    <link rel="stylesheet" href="{% static 'kyoyu_app/css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'log_app/css/home.css' %}">
 </head>
 <body>
+    {% if request.user.is_authenticated %}
+        <p>{{ request.user }}さんこんにちは</p>
+        <p><a href="{% url 'logout' %}">ログアウト</a>
+    {% else %}</p>
+        <a href="{% url 'login' %}">ログイン</a>
+    {% endif %}
+
     <div class="container">
         <h1>Home</h1>
         <div class="circle-container">
@@ -15,16 +22,16 @@
                 <div class="circle"></div>
             </div>
             <div class="circle-item">
-                <div class="circle"></div>
-                <p>日誌記入</p>
+                <div class="circle">📓</div>
+                <p><a href="{% url 'sharesheet'%}">日誌記入</a></p>
             </div>
             <div class="circle-item">
-                <div class="circle"></div>
-                <p>生徒情報</p>
+                <div class="circle">🧑‍🎓</div>
+                <p><a href="{% url 'students'%}">生徒情報</a></p>
             </div>
             <div class="circle-item">
-                <div class="circle"></div>
-                <p>授業提案</p>
+                <div class="circle">提案</div>
+                <p><a href="{% url 'caliculm'%}">提案</a></p>
             </div>
             <div class="circle-item">
                 <div class="circle"></div>
