--- a/log_app/templates/log_app/student_form.html
+++ b/log_app/templates/log_app/student_form.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="../../static/log_app/css/form.css">
 </head>
 <body>
   <h1>生徒の追加</h1>
