--- a/log_app/templates/log_app/student_detail.html
+++ b/log_app/templates/log_app/student_detail.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="../../static/log_app/css/student.css">
 </head>
 <body>
+  <h1>生徒情報検索</h1>
+  <form method="GET" action="{% url 'search_students' %}">
+    <input type="text" name="query" placeholder="生徒名やIDを入力" required>
+    <button type="submit">検索</button>
+  </form>
+
   <ul>
     <li><strong>保育園:</strong> {{ student.kindergarten }}</li>
     <li><strong>生徒ID:</strong> {{ student.student_id }}</li>
@@ -15,8 +21,9 @@
     <li><strong>生年月日:</strong> {{ student.birth_date }}</li>
     <li><strong>アレルギー:</strong> {{ student.allergy_info }}</li>
     <li><strong>追記:</strong> {{ student.additional_info }}</li>
-  <p><a href="{% url 'students'%}">戻る</a></p>
-</ul>
+  </ul>
+  <p><a href="{% url 'students' %}">戻る</a></p>
 </body>
 </html>
+
 
