--- a/log_app/templates/log_app/login.html
+++ b/log_app/templates/log_app/login.html
@@ -1,11 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="{% static 'log_app/css/login.css' %}">
+    <link rel="stylesheet" href="../../static/log_app/css/login.css">
 </head>
 <body>
     <div class="login-box">
