--- a/log_app/templates/log_app/student_list.html
+++ b/log_app/templates/log_app/student_list.html
@@ -10,6 +10,11 @@
   <h1>StudentList</h1>
   <p>(一応)がついてるのは、園側が管理できるようにするつもり</p>
   <a href="{% url 'create-student' %}">生徒の追加(一応)</a>
+  <h1>生徒情報検索</h1>
+  <form method="GET" action="{% url 'search_students' %}">
+    <input type="text" name="query" placeholder="生徒名やIDを入力" required>
+    <button type="submit">検索</button>
+  </form>
   <table>
     <tr>
       <th>園ID</th>
