--- a/log_app/templates/log_app/home.html
+++ b/log_app/templates/log_app/home.html
@@ -7,15 +7,20 @@
     <link rel="stylesheet" href="../../static/log_app/css/home.css">
 </head>
 <body>
-    {% if request.user.is_authenticated %}
-        <p>{{ request.user }}さんこんにちは</p>
-        <p><a href="{% url 'logout' %}">ログアウト</a>
-    {% else %}</p>
-        <a href="{% url 'login' %}">ログイン</a>
-    {% endif %}
+    <header class="header">
+        <h1 class="app-title">Smile Log</h1>
+        <div class="auth-links">
+            {% if request.user.is_authenticated %}
+                <p>{{ request.user }}さんこんにちは</p>
+                <a href="{% url 'logout' %}" class="button">ログアウト</a>
+            {% else %}
+                <a href="{% url 'login' %}" class="button">ログイン</a>
+            {% endif %}
+        </div>
+    </header>
 
     <div class="container">
-        <h1>Home</h1>
+        <h2>Home</h2>
         <div class="circle-container">
             <div class="circle-item">
                 <a href="{% url 'sharesheet'%}" class="circle">📓</a>
@@ -30,7 +35,6 @@
                 <p><a href="{% url 'caliculm'%}">提案</a></p>
             </div>
         </div>
-        
     </div>
 </body>
 </html>
