--- a/log_app/templates/log_app/make_caliculm.html
+++ b/log_app/templates/log_app/make_caliculm.html
@@ -10,14 +10,15 @@
 <body>
   <div class="container">
     <h1>授業提案</h1>
-    <form>
-        <label for="date">日付</label>
-        <input type="date" id="date" name="date">
-        <label for="objective">本日のねらい</label>
-        <textarea id="objective" name="objective" rows="4"></textarea>
-        <div class="arrow">
-            <a href="#">➜</a>
-        </div>
+    <form id="activityForm" method="POST" action="{% url 'check_caliculm' %}">
+    {% csrf_token %}
+      <label for="date">日付</label>
+      <input type="date" id="date" name="date" required>
+      <label for="objective">本日のねらい</label>
+      <textarea id="objective" name="objective" rows="4" required></textarea>
+      <div class="arrow">
+        <button type="submit">送信</button>
+      </div>
     </form>
     <a href="{% url 'home'%}">戻る</a>
 </div>
