--- a/log_app/templates/log_app/home.html
+++ b/log_app/templates/log_app/home.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ホームページ</title>
     <link rel="stylesheet" href="../../static/log_app/css/home.css">
 </head>
+
 <body>
     {% if request.user.is_authenticated %}
-        <p>{{ request.user }}さんこんにちは</p>
-        <p><a href="{% url 'logout' %}">ログアウト</a>
-    {% else %}</p>
-        <a href="{% url 'login' %}">ログイン</a>
+    <p>{{ request.user }}さんこんにちは</p>
+    <p><a href="{% url 'accounts:logout' %}">ログアウト</a></p>
+    {% else %}
+    <p><a href="{% url 'login' %}">ログイン</a></p>
     {% endif %}
 
     <div class="container">
@@ -30,7 +32,8 @@
                 <p><a href="{% url 'caliculm'%}">提案</a></p>
             </div>
         </div>
-        
+
     </div>
 </body>
-</html>
+
+</html> -->
