--- a/log_app/templates/log_app/make_caliculm.html
+++ b/log_app/templates/log_app/make_caliculm.html
@@ -1,25 +1,16 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="{% static 'log_app/css/make_caliculm.css' %}">
 </head>
+
 <body>
-  <div class="container">
-    <h1>授業提案</h1>
-    <form>
-        <label for="date">日付</label>
-        <input type="date" id="date" name="date">
-        <label for="objective">本日のねらい</label>
-        <textarea id="objective" name="objective" rows="4"></textarea>
-        <div class="arrow">
-            <a href="#">➜</a>
-        </div>
-    </form>
-    <a href="{% url 'home'%}">戻る</a>
-</div>
+  <h1>授業提案</h1>
+
+  <p><a href="{% url 'caregiver_dashboard'%}">戻る</a></p>
 </body>
+
 </html>
