--- a/log_app/templates/log_app/student_detail.html
+++ b/log_app/templates/log_app/student_detail.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,10 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="../../static/log_app/css/student.css">
+  <script src="{% static 'js/header.js' %}"></script>
 </head>
 
 <body>
-
+  <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
   <ul>
     <li><strong>保育園:</strong> {{ student.kindergarten }}</li>
     <li><strong>生徒ID:</strong> {{ student.student_id }}</li>
@@ -24,6 +30,10 @@
     <p><a href="{% url 'caregiver_students' %}">戻る</a></p>
     {% endif %}
   </ul>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
+</div>
 </body>
 
 </html>
