--- a/log_app/templates/log_app/student_form.html
+++ b/log_app/templates/log_app/student_form.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,13 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="../../static/log_app/css/form.css">
+  <script src="{% static 'js/header.js' %}"></script>
 </head>
 <body>
+  <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
   <h1>生徒の追加</h1>
   <form action="" method="post">
     {% csrf_token %}{{ form.as_p }}
     <input type="submit" value="追加">
   </form>
   <p><a href="{% url 'students'%}">戻る</a></p>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
+</div>
 </body>
 </html>
