--- a/log_app/static/log_app/css/home.css
+++ b/log_app/static/log_app/css/home.css
@@ -1,33 +1,3 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f5f5f5; /* 背景色は柔らかいグレー */
-    color: #333;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-}
-
-.header {
-    width: 100%;
-    background-color: #4a90e2; /* 青系のヘッダー */
-    color: white;
-    padding: 20px 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    transition: background-color 0.3s;
-}
-
-.header:hover {
-    background-color: #357ABD; /* ホバー時に少し濃い青に */
-}
-
 .app-title {
     margin: 0;
     font-size: 28px;
@@ -60,13 +30,13 @@ body {
 }
 
 .container {
-    max-width: 1200px;
     width: 100%;
-    padding: 20px;
-    background-color: #fff;
+    height: auto;
+    background-color: #faffff;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    min-height: 600px;
 }
 
 h2 {
@@ -108,18 +78,4 @@ h2 {
 
 .circle:hover {
     transform: scale(1.1);
-}
-
-a {
-    text-decoration: none;
-    color: #4a90e2;
-    font-weight: bold;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-p {
-    margin-top: 10px; 
 }
