--- a/log_app/static/log_app/css/sharesheet.css
+++ b/log_app/static/log_app/css/sharesheet.css
@@ -2,11 +2,10 @@
 /* コンテナのスタイル */
 .container {
     max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
     border-radius: 8px;
-    background-color: #F9F9F9;
+    background-color: #F9FFFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    min-height: 600px;
 }
 /* タイトルのスタイル */
 .container h1 {
@@ -25,20 +24,18 @@ label {
 /* テキストインプットとテキストエリアのスタイル */
 input[type="text"],
 input[type="date"],
-textarea {
+
+.textarea_content {
     width: 100%;
-    padding: 10px;
     margin-bottom: 25px; /* 間隔を広げるためにmargin-bottomを調整 */
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 3px solid #b8b8b8;
+    border-radius: 10px;
     box-sizing: border-box;
     font-size: 16px;
     background-color: #fff;
     color: #333;
-}
-textarea {
-    resize: vertical;
-    height: 300px; /* テキストエリアの高さを指定 */
+    height: 200px;
+    resize: none;
 }
 /* 矢印リンクのスタイル */
 .arrow {
