--- a/log_app/templates/header.html
+++ b/log_app/templates/header.html
@@ -14,7 +14,7 @@
             <div class="row g-0"> 
                 <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
                 <div class="col-8" style="padding-left: 0; padding-right: 0;">
-                    <a href="{% url 'home'%}">
+                    <a href="{% url 'caregiver_dashboard'%}">
                         <img style="width: 100%; height:auto;" src="{% static 'images/header.png' %}">
                     </a>
                 </div>
