--- a/log_app/templates/log_app/caregiver_dashboard.html
+++ b/log_app/templates/log_app/caregiver_dashboard.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -5,19 +6,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ホームページ</title>
-  <link rel="stylesheet" href="../../static/log_app/css/home.css">
+  <link rel="stylesheet" href="{% static 'log_app/css/home.css' %}">
+  <script src="{% static 'js/header.js' %}"></script>
 </head>
 
 <body>
-
-  {% if request.user.is_authenticated %}
-  <p>{{ request.user }}さんこんにちは</p>
-  <p><a href="{% url 'accounts:logout' %}">ログアウト</a>
-    {% else %}</p>
-  <a href="{% url 'accounts:login' %}">ログイン</a>
-  {% endif %}
+  <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
 
   <div class="container">
+    {% if request.user.is_authenticated %}
+      <p>{{ request.user }}さんこんにちは</p>
+    {% endif %}
     <h1>Home</h1>
     <div class="circle-container">
       <div class="circle-item">
@@ -35,6 +38,10 @@
     </div>
 
   </div>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
+</div>
 </body>
 
 </html>
