--- a/log_app/templates/log_app/check_caliculm.html
+++ b/log_app/templates/log_app/check_caliculm.html
@@ -5,21 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日誌記録ページ</title>
-    <link rel="stylesheet" href="{% static 'log_app/css/check_caliculm.css' %}">
+    <link rel="stylesheet" href="{% static 'log_app/css/caliculm.css' %}">
+    <script src="{% static 'js/header.js' %}"></script>
 </head>
 <body>
+    <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
     <div class="container">
         <h1>授業提案ページ</h1>
         <form method="POST" action="{% url 'check_caliculm' %}">
             {% csrf_token %}
             <label for="contact">授業の確認</label>
-            <textarea readonly class="content">{{caliculum}}</textarea>
+            <textarea class="textarea_content" readonly class="content">{{caliculum}}</textarea>
             <input type="hidden" name="sheet" value="{{ caliculum }}">
             <textarea id="message" name="message" rows="2" required style="width: 100%; font-size: large;"></textarea>
             <div class="check_button">            
             <button  type="submit" href="{% url  'sheet_complate'%}">送信</button>
             </div>
         </form>
-        <a href="{% url 'home'%}">ホームに戻る</a>
+        <a href="{% url 'caregiver_dashboard'%}">ホームに戻る</a>
     </div>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
+</div>
 </html>
