--- a/log_app/templates/log_app/complate_sharesheet.html
+++ b/log_app/templates/log_app/complate_sharesheet.html
@@ -5,16 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日誌記録ページ</title>
-    <link rel="stylesheet" href="{% static 'log_app/css/check_sharesheet.css' %}">
+    <link rel="stylesheet" href="{% static 'log_app/css/sharesheet.css' %}">
+    <script src="{% static 'js/header.js' %}"></script>
 </head>
 <body>
+    <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
+    <header><div id="header"></div></header>
     <div class="container">
         <h1>共有シートが登録されました</h1>
         <div class="img-container" style="text-align: center;">
             <img src="{% static 'images/complate.jpg' %}" alt="完了画像">
         </div>
-        <a href="{% url 'home'%}">ホームに戻る</a>
+        <a href="{% url 'caregiver_dashboard'%}">ホームに戻る</a>
     </div>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
+</div>
 </body>
 </html>
 
