--- a/log_app/templates/log_app/confirm_sharesheet.html
+++ b/log_app/templates/log_app/confirm_sharesheet.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日誌記録ページ</title>
     <link rel="stylesheet" href="{% static 'kyoyu_app/css/make_sharesheet.css' %}">
+    <script src="{% static 'js/header.js' %}"></script>
 </head>
 <body>
+    <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
     <div class="container">
         <h1>この文章でよろしいですか？</h1>
 
@@ -15,5 +21,9 @@
                 <a href="#">保存</a>
             </div>
     </div>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
+</div>
 </body>
 </html>
