--- a/log_app/templates/log_app/make_caliculm.html
+++ b/log_app/templates/log_app/make_caliculm.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,22 +6,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="{% static 'log_app/css/caliculm.css' %}">
+  <script src="{% static 'js/header.js' %}"></script>
 </head>
 
 <body>
+  <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
   <div class="container">
     <h1>授業提案</h1>
     <form id="activityForm" method="POST" action="{% url 'check_caliculm' %}">
     {% csrf_token %}
-      <label for="date">日付</label>
-      <input type="date" id="date" name="date" required>
+      <label for="date">日付</label><br>
+      <input class="date_content" type="date" id="date" name="date" required><br>
       <label for="objective">本日のねらい</label>
-      <textarea id="objective" name="objective" rows="4" required></textarea>
+      <textarea class="textarea_content" id="objective" name="objective" rows="4" required></textarea>
       <div class="arrow">
         <button type="submit">送信</button>
       </div>
     </form>
     <p><a href="{% url 'caregiver_dashboard'%}">戻る</a></p>
+</div>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
 </div>
 </body>
 
