--- a/log_app/templates/log_app/student_confirm_delete.html
+++ b/log_app/templates/log_app/student_confirm_delete.html
@@ -1,16 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="{% static 'js/header.js' %}"></script>
 </head>
 <body>
+  <header><div id="header"></div></header>
+  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
+    <div class="row g-0"> 
+        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+        <div class="col-8" style="padding-left: 0; padding-right: 0;">
   <p><a href="{% url 'students'%}">戻る</a></p>
   <form method="POST">
     {% csrf_token %}
     <p>{{ student }}を本当に削除しますか？</p>
     <input type="submit" value="削除">
   </form>
+</div>
+<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
+</div>
+</div>
 </body>
 </html>
