--- a/log_app/templates/log_app/complate_sharesheet.html
+++ b/log_app/templates/log_app/complate_sharesheet.html
@@ -18,9 +18,9 @@
     <div class="container">
         <h1>共有シートが登録されました</h1>
         <div class="img-container" style="text-align: center;">
-            <img src="{% static 'images/complate.jpg' %}" alt="完了画像">
+            <img src="{% static 'images/complate.svg' %}" alt="完了画像">
         </div>
-        <a href="{% url 'caregiver_dashboard'%}">ホームに戻る</a>
+        <a  class="btn btn-primary" href="{% url 'caregiver_dashboard'%}">ホームに戻る</a>
     </div>
 </div>
 <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
