--- a/log_app/templates/header.html
+++ b/log_app/templates/header.html
@@ -15,7 +15,7 @@
                 <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
                 <div class="col-8" style="padding-left: 0; padding-right: 0;">
                     <a href="{% url 'caregiver_dashboard'%}">
-                        <img style="width: 100%; height:auto;" src="{% static 'images/header.png' %}">
+                        <img style="width: 100%; height:auto;" src="{% static 'images/cuteheader.png' %}">
                     </a>
                 </div>
                 <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2">
