--- a/log_app/templates/log_app/login.html
+++ b/log_app/templates/log_app/login.html
@@ -8,6 +8,7 @@
     <title>Login Form</title>
     <link rel="stylesheet" href="../../static/log_app/css/login.css">
     <script src="{% static 'js/header.js' %}"></script>
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 
 <body>
