--- a/log_app/templates/log_app/student_confirm_delete.html
+++ b/log_app/templates/log_app/student_confirm_delete.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="{% static 'js/header.js' %}"></script>
+  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
   <header><div id="header"></div></header>
