--- a/log_app/templates/log_app/student_detail.html
+++ b/log_app/templates/log_app/student_detail.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="../../static/log_app/css/student.css">
   <script src="{% static 'js/header.js' %}"></script>
+  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 
 <body>
