--- a/log_app/templates/log_app/caregiver_dashboard.html
+++ b/log_app/templates/log_app/caregiver_dashboard.html
@@ -8,6 +8,7 @@
   <title>ホームページ</title>
   <link rel="stylesheet" href="{% static 'log_app/css/home.css' %}">
   <script src="{% static 'js/header.js' %}"></script>
+  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 
 <body>
