--- a/log_app/templates/log_app/complate_sharesheet.html
+++ b/log_app/templates/log_app/complate_sharesheet.html
@@ -7,6 +7,7 @@
     <title>日誌記録ページ</title>
     <link rel="stylesheet" href="{% static 'log_app/css/sharesheet.css' %}">
     <script src="{% static 'js/header.js' %}"></script>
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
     <header><div id="header"></div></header>
