--- a/log_app/templates/log_app/make_caliculm.html
+++ b/log_app/templates/log_app/make_caliculm.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="{% static 'log_app/css/caliculm.css' %}">
   <script src="{% static 'js/header.js' %}"></script>
+  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 
 <body>
